@@ -1,20 +1,19 @@
 package org.jenkinsci.plugins.tuleap_git_branch_source.webhook.helper;
 
 import org.apache.commons.io.IOUtils;
-import org.kohsuke.stapler.StaplerRequest;
+import org.kohsuke.stapler.StaplerRequest2;
 
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 
-import static com.google.common.base.Charsets.UTF_8;
 
 public class TuleapWebHookHelper {
-    public String getStringPayload(StaplerRequest request) throws IOException {
-        return IOUtils.toString(request.getInputStream());
+    public String getStringPayload(StaplerRequest2 request) throws IOException {
+        return IOUtils.toString(request.getInputStream(), StandardCharsets.UTF_8);
     }
 
-    public String getUTF8DecodedPayload(String payload) throws UnsupportedEncodingException {
-        return URLDecoder.decode(payload,  UTF_8.name());
+    public String getUTF8DecodedPayload(String payload) {
+        return URLDecoder.decode(payload, StandardCharsets.UTF_8);
     }
 }
